<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".GyrosensorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="#F8F5F5"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:title="Gyrometer"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:id="@+id/layout_calibrated_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/label_calibrated_filter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_calibrated_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#D81B60"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_calibrated_filter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/label_calibrated_filter_name"
                android:text="@string/sensor_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_calibrated_statistics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TableLayout
                android:id="@+id/table_calibrated_statistics_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/table_calibrated_statistics_left_row_0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_x_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_x_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_x_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_x_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_y_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_y_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_y_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_y_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_z_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_z_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_z_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_z_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="7.25"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1" >

        <com.example.pedometer.gauge.GaugeBearing
            android:id="@+id/gauge_bearing_calibrated"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="0.5" />

        <com.example.pedometer.gauge.GaugeRotation
            android:id="@+id/gauge_tilt_calibrated"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1.25"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <com.example.pedometer.view.VectorDrawableButton
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_start"
            android:layout_weight="0.5"
            android:backgroundTint="@color/dark_blue"
            android:theme="@style/AppTheme.BlueButton"
            android:textStyle="bold"
            app:drawableBottomCompat="@drawable/ic_timeline_white_48px"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="1sp"
        android:textColor="#fff"
        android:text="" />
    <TextView
        android:id="@+id/textY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textColor="#fff"
        android:textSize="1sp"

        android:text="" />
    <TextView
        android:id="@+id/textZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="1sp"
        android:textColor="#fff"
        android:text="" />


</LinearLayout>